armando el instructivo
todo esto se puede borrar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h2>Este sitio es una prueba</h2>
-    <p> cuando se cambia algo de GIT seve asi</p>
+    <p> cuando se cambia algo de GIT se ve asi</p>
+    <p> otraq prueba</p>
 </body>
 </html>
