--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h2>Este sitio es una prueba</h2>
     <p> cuando se cambia algo de GIT se ve asi</p>
+    <p> otraq prueba</p>
 </body>
 </html>
