--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Este sitio es una prueba</h2>
+    <P>Este sitio es una prueba</p>
 </body>
 </html>
