agrego link del form de compra

--- a/Form-compra.html
+++ b/Form-compra.html
@@ -62,7 +62,7 @@
 
             <form class="card p-2">
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Código de promosión">
+                <input type="text" class="form-control" placeholder="Código de promoción">
                 <button type="submit" class="btn btn-secondary">Aplicar</button>
               </div>
             </form>
