--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <P>Este sitio es una prueba</p>
+        <a href="Form-compra.html" target="_blank">Este es un link temporal para el formulario de compra</a>
 </body>
 </html>
