--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/Imagenes/Marcadores.ico" type="image/x-icon">
     
     <!-- link a archivos css -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="/css/slider.css">
     
     <!-- link a archivo javascript -->
