--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     
     <!-- link a archivos css -->
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="/css/slider.css">
+    <link rel="stylesheet" href="css/slider.css">
     
     <!-- link a archivo javascript -->
-    <script src="/js/slider.js"></script>
+    <script src="js/slider.js"></script>
 
     <title>Proyecto CaC</title>
 
