cambios en la URL de los archivos

--- a/Form-compra.html
+++ b/Form-compra.html
@@ -4,11 +4,11 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="shortcut icon" href="/Imagenes/Marcadores.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="Imagenes/Marcadores.ico" type="image/x-icon">
             
       <!-- link a archivos css -->
-      <link rel="stylesheet" href="/css/index.css">
-      <link href="/css/form-validation.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/index.css">
+      <link href="css/form-validation.css" rel="stylesheet">
   
       <title>Proyecto CaC</title>
 
@@ -270,7 +270,7 @@
         </div>
       </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-      <script src="/js/form-validation.js"></script>
+      <script src="js/form-validation.js"></script>
     </div>
 
 
@@ -281,9 +281,9 @@
       <div class="itmesfooter">
           <div class="EnlacesFooter">Derechos&Reservados</div>
           <div class="EnlacesFooter">
-              <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="/Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
-              <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="/Imagenes/FacebookLogo.ico" height="20px"></a></div>
-              <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="/Imagenes/InstagramLogo.ico" height="20px"></a></div>
+              <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
+              <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="Imagenes/FacebookLogo.ico" height="20px"></a></div>
+              <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
           </div>
           <div class="EnlacesFooter">
               <a href="nosotros.html">Quienes somos</a>
