--- a/productos.html
+++ b/productos.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/Imagenes/Marcadores.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagenes/Marcadores.ico" type="image/x-icon">
     
     <!-- link a archivos css -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <!--<link rel="stylesheet" href="/css/slider.css">
     
     link a archivo javascript
@@ -21,7 +21,7 @@
     <ul class="menu-horizontal" id="menu1">
 
         <!-- Barra de búsqueda -->
-        <li><a title="Logo" href="index.html"> <img src="/Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
+        <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
         <li> <a href="">Buscador</a></li>
 
         <!-- categorias -->
@@ -59,9 +59,9 @@
     <div class="itmesfooter">
         <div class="EnlacesFooter">Derechos&Reservados</div>
         <div class="EnlacesFooter">
-            <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="/Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
-            <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="/Imagenes/FacebookLogo.ico" height="20px"></a></div>
-            <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="/Imagenes/InstagramLogo.ico" height="20px"></a></div>
+            <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
+            <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="Imagenes/FacebookLogo.ico" height="20px"></a></div>
+            <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
         </div>
         <div class="EnlacesFooter">
             <a href="nosotros.html">Quienes somos</a>
