--- a/Form-compra.html
+++ b/Form-compra.html
@@ -20,7 +20,7 @@
       <ul class="menu-horizontal" id="menu1">
 
           <!-- Barra de búsqueda -->
-          <li><a title="Logo" href="index.html"> <img src="/Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
+          <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
           <li> <a href="">Buscador</a></li>
 
           <!-- categorias -->
