--- a/Form-compra.html
+++ b/Form-compra.html
@@ -265,6 +265,7 @@
               <hr class="my-4">
 
               <button class="col-5 btn btn-primary btn-lg" type="submit">Confirme la compra</button>
+              <div style="padding: 4vh;"> </div>
             </form>
           </div>
         </div>
@@ -272,6 +273,8 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
       <script src="js/form-validation.js"></script>
     </div>
+
+
 
 
    
@@ -291,5 +294,6 @@
       </div>
       
   </footer>
+
   </body>
 </html>
