--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     </li>
                     <li><a href="">Escritura</a>
                         <ul class="menu-vertical-2">
-                            <li><a href="">Marcadores</a></li>
-                            <li><a href="">Lápices</a></li>
+                            <li><a href="productos.html#marcadores">Marcadores</a></li>
+                            <li><a href="/productos.html#lapices">Lápices</a></li>
                             <li><a href="">Biromes</a></li>                   
                         </ul>
                     </li>
