--- a/productos.html
+++ b/productos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/productos.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/productos.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,8 +29,8 @@
                         </li>
                         <li><a href="">Escritura</a>
                             <ul class="menu-vertical-2">
-                                <li><a href="">Marcadores</a></li>
-                                <li><a href="">Lápices</a></li>
+                                <li><a href="productos.html#marcadores">Marcadores</a></li>
+                                <li><a href="/productos.html#lapices">Lápices</a></li>
                                 <li><a href="">Biromes</a></li>                   
                             </ul>
                         </li>
@@ -55,55 +55,55 @@
         <hr>
         <div class="subtipo-prod">
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                <h6>Nombre 1</h6>
+                <p class="detalle-prod">descripcion del producto</p>
+            </div>
+            <div class="item-prod">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="img/marcado_1.webp" alt="item 1">
+                <img src="imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
@@ -114,31 +114,31 @@
         <hr>
         <div class="subtipo-prod">
             <div class="item-prod">
-                <img src="img/Lapices_1.webp" alt="item 1">
+                <img src="imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/Lapices_1.webp" alt="item 1">
+                <img src="imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/Lapices_1.webp" alt="item 1">
+                <img src="imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/Lapices_1.webp" alt="item 1">
+                <img src="imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="img/Lapices_1.webp" alt="item 1">
+                <img src="imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
@@ -157,12 +157,26 @@
         <li>
             separar un poca la foto del boton
         </li>
+        <li>
+            asignar algo al boton de compra
+        </li>
     </ul>
     <p></p>
 
 </main>
 <footer>
-    footer
+    <div class="itmesfooter">
+        <div class="EnlacesFooter">Derechos&Reservados</div>
+        <div class="EnlacesFooter">
+            <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
+            <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="Imagenes/FacebookLogo.ico" height="20px"></a></div>
+            <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
+        </div>
+        <div class="EnlacesFooter">
+            <a href="nosotros.html">Quienes somos</a>
+        </div>
+    </div>
+    
 </footer>
 </body>
 </html>
