arreglo de ruta de imagenes

--- a/productos.html
+++ b/productos.html
@@ -55,55 +55,55 @@
         <hr>
         <div class="subtipo-prod">
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/marcado_1.webp" alt="item 1">
+                <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
@@ -114,31 +114,31 @@
         <hr>
         <div class="subtipo-prod">
             <div class="item-prod">
-                <img src="imagenes/Lapices_1.webp" alt="item 1">
+                <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/Lapices_1.webp" alt="item 1">
+                <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/Lapices_1.webp" alt="item 1">
+                <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/Lapices_1.webp" alt="item 1">
+                <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
-                <img src="imagenes/Lapices_1.webp" alt="item 1">
+                <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
