--- a/productos.html
+++ b/productos.html
@@ -22,16 +22,16 @@
                     <ul class="menu-vertical">
                         <li><a href="">Papeleria</a>
                             <ul class="menu-vertical-2">
-                                <li><a href="">Cuadernos</a></li>
-                                <li><a href="">Libretas</a></li>
-                                <li><a href="">Resmas</a></li>                    
+                                <li><a href="productos.html#cuadernos">Cuadernos</a></li>
+                                <li><a href="productos.html#libretas">Libretas</a></li>
+                                <li><a href="productos.html#resmas">Resmas</a></li>                    
                             </ul>
                         </li>
                         <li><a href="">Escritura</a>
                             <ul class="menu-vertical-2">
                                 <li><a href="productos.html#marcadores">Marcadores</a></li>
-                                <li><a href="/productos.html#lapices">Lápices</a></li>
-                                <li><a href="">Biromes</a></li>                   
+                                <li><a href="productos.html#lapices">Lápices</a></li>
+                                <li><a href="productos.html#biromes">Biromes</a></li>                   
                             </ul>
                         </li>
                     </ul>
@@ -47,7 +47,43 @@
 
 
     <main class="cuerpo">
-        
+        <div class="tipo-prod">
+            <h4>Paeleria</h4>
+            <hr>
+            <h5 id="cuadernos">Cuadernos</h5>
+            <hr>
+            <div class="subtipo-prod">
+                <div class="item-prod">
+                    <img src="Imagenes/cuaderno_1.webp" alt="item 1">
+                    <p class="precio-prod">$ 1250</p>
+                    <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                    <h6>Cuaderno 1</h6>
+                    <p class="detalle-prod">descripcion del producto</p>
+                </div>
+            </div>
+            <h5 id="libretas">Libretas</h5>
+            <hr>
+            <div class="subtipo-prod">
+                <div class="item-prod">
+                    <img src="Imagenes/Libreta_1.webp" alt="item 1">
+                    <p class="precio-prod">$ 2350</p>
+                    <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                    <h6>Libreta 1</h6>
+                    <p class="detalle-prod">descripcion del producto</p>
+                </div>
+            </div>
+            <h5 id="resmas">Resmas</h5>
+            <hr>
+            <div class="subtipo-prod">
+                <div class="item-prod">
+                    <img src="Imagenes/Resma_1.webp" alt="item 1">
+                    <p class="precio-prod">$ 1900</p>
+                    <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                    <h6>Resma 1</h6>
+                    <p class="detalle-prod">descripcion del producto</p>
+                </div>
+            </div>
+        </div>
     <div class="tipo-prod">
         <h4>Escritura</h4>
         <hr>
@@ -56,95 +92,141 @@
         <div class="subtipo-prod">
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
         </div>
-        <hr>
         <h5 id="lapices">Lapices</h5>
         <hr>
         <div class="subtipo-prod">
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
+                <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Lapiz 1</h6>
+                <p class="detalle-prod">descripcion del producto</p>
+            </div>
+        </div> 
+        <h5 id="biromes">Biromes</h5>
+        <hr>
+        <div class="subtipo-prod">
+            <div class="item-prod">
+                <img src="Imagenes/birome_1.webp" alt="item 1">
+                <p class="precio-prod">$ 1900</p>
+                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                <h6>Birome 1</h6>
+                <p class="detalle-prod">descripcion del producto</p>
+            </div>
+            <div class="item-prod">
+                <img src="Imagenes/birome_2.webp" alt="item 1">
+                <p class="precio-prod">$ 1900</p>
+                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                <h6>Birome 2</h6>
+                <p class="detalle-prod">descripcion del producto</p>
+            </div>
+            <div class="item-prod">
+                <img src="Imagenes/birome_3.webp" alt="item 1">
+                <p class="precio-prod">$ 1900</p>
+                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                <h6>Birome 3</h6>
+                <p class="detalle-prod">descripcion del producto</p>
+            </div>
+            <div class="item-prod">
+                <img src="Imagenes/birome_4.webp" alt="item 1">
+                <p class="precio-prod">$ 1900</p>
+                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
+                <h6>Birome 4</h6>
                 <p class="detalle-prod">descripcion del producto</p>
             </div>
         </div>
     </div>
+    <hr>
     <h4>Que me falta</h4>
     <ul>
         <li>mejorar el diseño y la separaciòn de titulo y 
@@ -155,7 +237,7 @@
             y de la descripcion
         </li>
         <li>
-            separar un poca la foto del boton
+            poner un cambio de color en el focus del boton
         </li>
         <li>
             asignar algo al boton de compra
