cambio de slider
Cambie el slider por uno que es solo css, sin js, pero mucho más dinamico. no tiene botones, pero para las promos sirve

--- a/productos.html
+++ b/productos.html
@@ -20,14 +20,14 @@
                 <!-- categorias -->
                 <li> <a href="productos.html">Productos</a>
                     <ul class="menu-vertical">
-                        <li><a href="">Papeleria</a>
+                        <li><a href="productos.html#papeleria">Papeleria</a>
                             <ul class="menu-vertical-2">
                                 <li><a href="productos.html#cuadernos">Cuadernos</a></li>
                                 <li><a href="productos.html#libretas">Libretas</a></li>
                                 <li><a href="productos.html#resmas">Resmas</a></li>                    
                             </ul>
                         </li>
-                        <li><a href="">Escritura</a>
+                        <li><a href="productos.html#escritura">Escritura</a>
                             <ul class="menu-vertical-2">
                                 <li><a href="productos.html#marcadores">Marcadores</a></li>
                                 <li><a href="productos.html#lapices">Lápices</a></li>
@@ -45,10 +45,9 @@
     
     </header>
 
-
     <main class="cuerpo">
         <div class="tipo-prod">
-            <h4>Paeleria</h4>
+            <h4 id="papeleria">Paeleria</h4>
             <hr>
             <h5 id="cuadernos">Cuadernos</h5>
             <hr>
@@ -85,7 +84,7 @@
             </div>
         </div>
     <div class="tipo-prod">
-        <h4>Escritura</h4>
+        <h4 id="escritura">Escritura</h4>
         <hr>
         <h5 id="marcadores">Marcadores</h5>
         <hr>
