correcion de error de superposición
se corrije un error de superposicion en el menu y el slider

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+    <header>
     <nav class="navBarr">
         <ul class="menu-horizontal" id="menu1">
 
@@ -47,7 +48,7 @@
             <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
         </ul>
     </nav>
-
+    </header>
     
 
     <!-- Empieza el carrousel -->
