Actualización de Nav
Actualicé el html del nav de todas las páginas

--- a/nosotros.html
+++ b/nosotros.html
@@ -9,45 +9,47 @@
     
     <!-- link a archivos css -->
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/MenuHamb.css">
 
     <title>Proyecto CaC</title>
 
 <body>
 
-    <nav class="navBarr">
-        <ul class="menu-horizontal" id="menu1">
+    <header>
+        <!-- <nav class="NavBar"> -->
+        <nav class="nav">
+            <ul class="menu-horizontal" id="menu1">
 
-            <!-- Barra de búsqueda -->
-            <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
-            <li> <a href="">Buscador</a></li>
+                <!-- Logo -->
+                <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
 
-            <!-- categorias -->
-            <li> <a href="productos.html">Productos</a>
-                <ul class="menu-vertical">
-                    <li><a href="">Papeleria</a>
-                        <ul class="menu-vertical-2">
-                            <li><a href="">Cuadernos</a></li>
-                            <li><a href="">Libretas</a></li>
-                            <li><a href="">Resmas</a></li>                    
-                        </ul>
-                    </li>
-                    <li><a href="">Escritura</a>
-                        <ul class="menu-vertical-2">
-                            <li><a href="productos.html#marcadores">Marcadores</a></li>
-                            <li><a href="/productos.html#lapices">Lápices</a></li>
-                            <li><a href="">Biromes</a></li>                   
-                        </ul>
-                    </li>
-                </ul>
-            </li>
+                <!-- Categorias -->
+                <li> <a href="">Productos</a>
+                    <ul>
+                        <li><a href="">Papeleria</a>
+                            <ul>
+                                <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
+                                <li><a href="/productos.html#libretas">Libretas</a></li>
+                                <li><a href="/productos.html#resmas">Resmas</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">Escritura</a>
+                            <ul>
+                                <li><a href="/productos.html#marcadores">Marcadores</a></li>
+                                <li><a href="/productos.html#lapices">Lápices</a></li>
+                                <li><a href="/productos.html#biromes">Biromes</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
 
-            <!-- Enlaces en nav -->
-            <li><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
-            <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
-        </ul>
-    </nav>
-    
+                <!-- Enlaces en nav -->
+                <li><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
+                <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <footer>
         <div class="itmesfooter">
             <div class="EnlacesFooter">Derechos&Reservados</div>
