--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/MenuHamb.css">
         <link rel="stylesheet" href="css/slider.css">
         
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
         <title>Proyecto CaC</title>
@@ -22,21 +23,24 @@
             <!-- <nav class="NavBar"> -->
             <nav class="nav">
                 <ul class="menu-horizontal" id="menu1">
-
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa-solid fa-bars"></i>
+                    </label>
                     <!-- Logo -->
-                    <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
+                    <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" alt="Logo Mercado de las Lapiceras" class="logo"></a></li>
 
                     <!-- Categorias -->
-                    <li> <a href="">Productos</a>
+                    <li> <a href="/productos.html">Productos</a>
                         <ul>
-                            <li><a href="">Papeleria</a>
+                            <li><a href="/productos.html#papeleria">Papeleria</a>
                                 <ul>
                                     <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
                                     <li><a href="/productos.html#libretas">Libretas</a></li>
                                     <li><a href="/productos.html#resmas">Resmas</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Escritura</a>
+                            <li><a href="/productos.html#escritura">Escritura</a>
                                 <ul>
                                     <li><a href="/productos.html#marcadores">Marcadores</a></li>
                                     <li><a href="/productos.html#lapices">Lápices</a></li>
@@ -51,6 +55,7 @@
                     <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
                 </ul>
             </nav>
+            <section></section>
         </header>
 
 
