--- a/nosotros.html
+++ b/nosotros.html
@@ -24,16 +24,16 @@
                 <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
 
                 <!-- Categorias -->
-                <li> <a href="">Productos</a>
+                <li> <a href="/productos.html">Productos</a>
                     <ul>
-                        <li><a href="">Papeleria</a>
+                        <li><a href="/productos.html#papeleria">Papeleria</a>
                             <ul>
                                 <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
                                 <li><a href="/productos.html#libretas">Libretas</a></li>
                                 <li><a href="/productos.html#resmas">Resmas</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Escritura</a>
+                        <li><a href="/productos.html#escritura">Escritura</a>
                             <ul>
                                 <li><a href="/productos.html#marcadores">Marcadores</a></li>
                                 <li><a href="/productos.html#lapices">Lápices</a></li>
