--- a/productos.html
+++ b/productos.html
@@ -19,9 +19,9 @@
                 <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
 
                 <!-- Categorias -->
-                <li> <a href="">Productos</a>
+                <li> <a href="/productos.html">Productos</a>
                     <ul>
-                        <li><a href="">Papeleria</a>
+                        <li><a href="/productos.html#papeleria">Papeleria</a>
                             <ul>
                                 <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
                                 <li><a href="/productos.html#libretas">Libretas</a></li>
