--- a/index.html
+++ b/index.html
@@ -71,21 +71,13 @@
 
         
         <h2>Clientes que Confian en nosotros</h2>
-        <div class="ClientesRegulares">
-            <img src="Imagenes/clientes/aes-elsalvador.jpg" alt="aes">
-            <img src="Imagenes/clientes/cetesdirecto.jpg" alt="cetesdirecto">
-            <img src="Imagenes/clientes/compartamos-banco.jpg" alt="compartamos">
-            <img src="Imagenes/clientes/conecta.jpg" alt="conecta">
-            <img src="Imagenes/clientes/distriluz.jpg" alt="elektra">
-            <img src="Imagenes/clientes/elektra.jpg" alt="">
-            <img src="Imagenes/clientes/epm.jpg" alt="epm">
-            <img src="Imagenes/clientes/fortel.jpg" alt="fortel">
-            <img src="Imagenes/clientes/gea-internacional.jpg" alt="gea">
-            <img src="Imagenes/clientes/hidrandina.jpg" alt=hidrandina">
-            <img src="Imagenes/clientes/impronta.jpg" alt="impronta">
-            <img src="Imagenes/clientes/ituran.jpg" alt="ituran">
+        <ul id="clientesLogo" class="ClientesRegulares"> <!-- class="ClientesRegulares" -->
 
-        </div>
+        </ul>
+        <script src="js/apiGetLocal.js"></script>
+        <script>
+                traer()
+        </script>
 
 
 
