--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <!-- <nav class="NavBar"> -->
             <nav class="nav">
-                <ul class="menu-horizontal" id="menu1">
+                <ul class="menu-horizontal">
                     <input type="checkbox" id="check">
                     <label for="check" class="checkbtn">
                         <i class="fa-solid fa-bars"></i>
