--- a/productos.html
+++ b/productos.html
@@ -13,7 +13,7 @@
     <header>
         <!-- <nav class="NavBar"> -->
         <nav class="nav">
-            <ul class="menu-horizontal" id="menu1">
+            <ul class="menu-horizontal">
 
                 <!-- Logo -->
                 <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" height="100px" alt="Logo Mercado de las Lapiceras"></a></li>
