Primera versión de Quienes somos
Pequeña introducción a la empresa con links a Productos y Contacto
3 mapas de sucursales con horario y teléfono

--- a/nosotros.html
+++ b/nosotros.html
@@ -10,6 +10,7 @@
     <!-- link a archivos css -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/MenuHamb.css">
+    <link rel="stylesheet" href="css/nosotros.css">
 
     <title>Proyecto CaC</title>
 
@@ -49,6 +50,55 @@
             </ul>
         </nav>
     </header>
+
+    <h2>Beinvenidos a El Mercado de las Lapiceras</h2>
+<p>
+    Somos una joven empresa importadora y distribuidora de artículos de librería comercial de calidad. Tenemos varias sucursales ubicadas en CABA, pero nuestros productos llegan a todo el país. Contamos con atención personalizada y customizada para poder brindarte el mejor servicio, tanto en ventas al canal mayorista como al canal minorista. Te ofrecemos esta plataforma digital para tu comodidad y conveniencia.
+</p>
+<p>
+    Somos proveedor de insumos para empresas líderes de mercado. Contamos con 30 años de experiencia que nos avalan en el rubro.
+</p>
+<p>
+    Disponemos de una gran variedad de productos en diferentes rubros. Además, trabajamos con insumos de alta calidad, lo que brinda una gran confianza a nuestros clientes.
+</p>
+<p>
+    Podes conocer nuestra tienda completa <a href="/productos.html">aqui</a>.
+</p>
+<p>
+    Por otro lado, trabajamos con venta por menor y por mayor en toda la web. Además, disponemos de diferentes métodos de pago en nuestra tienda.
+</p>
+<p>
+Adicionalmente, trabajamos con algunos métodos de envíos para los distintos rubros. También, incluimos metodo de envío gratis con compras que superen ciertos importes. Aprovechalo ahora!
+</p>
+<p>
+Para finalizar, te dejamos un link para que visites nuestra <a href="/contacto.html">sección de contacto</a>. Allí podrás realizarnos cualquier consulta que tengas, y te responderemos a la brevedad. No esperes mas, y hace que grupoTAM sea el proveedor de tu empresa. Comunicate hoy!
+</p>
+    <h2>
+        Nuestras sucursales
+    </h2>
+    <ul class="sucursales">
+        <li>    <h3>Sucursal Caballito</h3>
+                <ul>
+                    <li>Lun. a Vie. de 9 a 17h</li>
+                    <li>Tel: 011 1234-5678</li>
+                </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7114537391726!2d-58.4232366842366!3d-34.611457265415844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca5ef70a2611%3A0xe92549babeed836b!2sRivadavia%20%26%20Av.%20Medrano%2C%20C1178%20CABA!5e0!3m2!1ses!2sar!4v1665867008611!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">Mapa sucursal Caballito</iframe>
+        </li>
+        <li>    <h3>Sucursal Belgrano</h3>
+            <ul>
+                <li>Lun. a Vie. de 9 a 17h</li>
+                <li>Tel: 011 1234-5678</li>
+            </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.666579074077!2d-58.45880938423789!3d-34.561996462799854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d3849c3221%3A0xc8999711cc581a5b!2sAv.%20Cabildo%20%26%20Av.%20Juramento%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1665868000313!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </li>
+        <li>    <h3>Sucursal Devoto</h3>
+            <ul>
+                <li>Lun. a Vie. de 9 a 17h</li>
+                <li>Tel: 011 1234-5678</li>
+            </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1441173748753!2d-58.5053770842369!3d-34.60051706483677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb632284397c9%3A0x18894717f245ea40!2sAv.%20Francisco%20Beir%C3%B3%20%26%20Av.%20Lincoln%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1665867355201!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">Mapa sucursal Devoto</iframe>
+        </li>
+    </ul> 
+
 
     <footer>
         <div class="itmesfooter">
