arreglo de links

--- a/contacto.html
+++ b/contacto.html
@@ -31,16 +31,16 @@
                         <ul>
                             <li><a href="/productos.html#papeleria">Papeleria</a>
                                 <ul>
-                                    <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
-                                    <li><a href="/productos.html#libretas">Libretas</a></li>
-                                    <li><a href="/productos.html#resmas">Resmas</a></li>
+                                    <li><a href="productos.html#cuadernos">Cuadernos</a></li>
+                                    <li><a href="productos.html#libretas">Libretas</a></li>
+                                    <li><a href="productos.html#resmas">Resmas</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/productos.html#escritura">Escritura</a>
+                            <li><a href="productos.html#escritura">Escritura</a>
                                 <ul>
-                                    <li><a href="/productos.html#marcadores">Marcadores</a></li>
-                                    <li><a href="/productos.html#lapices">Lápices</a></li>
-                                    <li><a href="/productos.html#biromes">Biromes</a></li>
+                                    <li><a href="productos.html#marcadores">Marcadores</a></li>
+                                    <li><a href="productos.html#lapices">Lápices</a></li>
+                                    <li><a href="productos.html#biromes">Biromes</a></li>
                                 </ul>
                             </li>
                         </ul>
