--- a/Form-compra.html
+++ b/Form-compra.html
@@ -30,16 +30,16 @@
                     <ul>
                         <li><a href="">Papeleria</a>
                             <ul>
-                                <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
-                                <li><a href="/productos.html#libretas">Libretas</a></li>
-                                <li><a href="/productos.html#resmas">Resmas</a></li>
+                                <li><a href="productos.html#cuadernos">Cuadernos</a></li>
+                                <li><a href="productos.html#libretas">Libretas</a></li>
+                                <li><a href="productos.html#resmas">Resmas</a></li>
                             </ul>
                         </li>
                         <li><a href="">Escritura</a>
                             <ul>
-                                <li><a href="/productos.html#marcadores">Marcadores</a></li>
-                                <li><a href="/productos.html#lapices">Lápices</a></li>
-                                <li><a href="/productos.html#biromes">Biromes</a></li>
+                                <li><a href="productos.html#marcadores">Marcadores</a></li>
+                                <li><a href="productos.html#lapices">Lápices</a></li>
+                                <li><a href="productos.html#biromes">Biromes</a></li>
                             </ul>
                         </li>
                     </ul>
